<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/button_border"
        android:text="@string/registrati"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/regName"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="176dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:background="@color/login_form_details_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/regSurname"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/cognome"
        android:inputType="textPersonName"
        android:background="@color/login_form_details_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/indirizzo_mail"
        android:inputType="textEmailAddress"
        android:background="@color/login_form_details_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regSurname"
        android:autofillHints="" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@color/login_form_details_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEmail"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/regPhone"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/numero_di_cellulare"
        android:inputType="phone"
        android:background="@color/login_form_details_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>